[package]
name = "cosmos"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.4"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dev-dependencies]
bootloader = "0.11.4"
test_kernel = { path = "tests/integration/test_kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
eyre = "0.6.8"

[workspace]
members = ["kernel", "tests/integration/test_kernel"]
